--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -203,6 +203,7 @@ ul>li>a {
 .jBox-title>div>a {
     display: block;
     padding:5px;
+    margin-bottom: 5px;
     border-bottom: 1px solid #C8C8C8;
 }
 
@@ -212,14 +213,14 @@ ul>li>a:hover {
 
 hr { 
     padding:5px;
+    padding-top:5px;
+    padding-bottom:0px;
 
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0px;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
-    border-width: 1px;
+    border-width: 0px;
     border-color: #FFF;
 } 
 
