red border helps to highlight popup

--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -208,7 +208,7 @@ p {
     -moz-border-radius-bottomleft:9px;
     border-bottom-left-radius:9px;
     text-indent:0;
-    border:1px solid #dcdcdc;
+    border:1px solid #D22018;
 
     min-width:140px;
 
