--- a/portal/frontend/frontend/static/css/pyp_reports.css
+++ b/portal/frontend/frontend/static/css/pyp_reports.css
@@ -42,11 +42,17 @@ body {
 	border-spacing: 1px;
 }
 
+.table-student-info {
+  margin-right:140px;
+  border-collapse: separate;
+  border-spacing: 1px;    
+}
+
 .table-header-rotated th.row-header{
   width: auto;
 }
  
-.table-header-rotated td{
+.table-header-rotated td {
   width: 40px;
   border-top: 2px solid #C0C0C0;
   border-left: 2px solid #C0C0C0; 
@@ -57,6 +63,18 @@ body {
   padding: 8px;
 }
  
+.table-student-info td {
+  width: 40px;
+  border-top: 2px solid #C0C0C0;
+  border-left: 2px solid #C0C0C0; 
+  border-right: 2px solid #C0C0C0; 
+  border-bottom: 2px solid #C0C0C0;
+  vertical-align: middle;
+  text-align: center;
+  padding: 8px;
+}
+
+
 .table-header-rotated th.rotate-45 {
   height: 140px;
   width: 80px;
@@ -109,6 +127,17 @@ body {
 	width: 90%;
 	text-align:left;
 	border-left: 10px solid #C0C0C0;
+}
+
+.table-student-info tr > td:first-child {
+  width: 20%;
+  text-align:left;
+  border-left: 10px solid #C0C0C0;
+  background-color: #C0C0C0;
+}
+
+.table-student-info tr > td:nth-child(2) {
+  text-align:left;
 }
 
 .table-header-rotated tr > th:first-child {
