--- a/portal/frontend/frontend/static/css/pyp_reports.css
+++ b/portal/frontend/frontend/static/css/pyp_reports.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #eee;
 	font-family: Ariel, sans-serif;
+  font-size: 10pt;
 }
 .content {
     position: relative;
@@ -82,7 +83,7 @@ body {
   max-width: 80px;
   position: relative;
   padding: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1;
 }
  
