--- a/portal/frontend/frontend/static/css/pyp_reports.css
+++ b/portal/frontend/frontend/static/css/pyp_reports.css
@@ -3,6 +3,27 @@ body {
 	font-family: Ariel, sans-serif;
   font-size: 10pt;
 }
+
+#frontcover-heading {
+    text-align: center;
+    padding: 2px;
+    position: relative;    
+}
+
+#frontcover-image {
+    position: absolute;
+    padding: 2px;
+}
+
+#frontcover-text {
+    padding: 2px;
+    display: inline-block;
+}
+
+.image-header {
+  float: left;
+}
+
 .content {
     position: relative;
     margin: 100px auto;
@@ -88,7 +109,7 @@ body {
 }
  
 .table-header-rotated th:first-child {
-	vertical-align: bottom;
+  vertical-align: bottom;
 }
 
 .table-header-rotated th.rotate-45 > div{
@@ -130,11 +151,23 @@ body {
 	border-left: 10px solid #C0C0C0;
 }
 
+.table-header-rotated tr > td:nth-child(3) {
+  background-color: #eee;
+}
+
+.table-header-rotated tr > td:nth-child(4) {
+  background-color: #eee;
+}
+
 .table-student-info tr > td:first-child {
-  width: 20%;
+  width: 300px;
   text-align:left;
   border-left: 10px solid #C0C0C0;
   background-color: #C0C0C0;
+}
+
+.table-student-info tr > td:not(:first-child) {
+  width: 80%;
 }
 
 .table-student-info tr > td:nth-child(2) {
@@ -146,14 +179,20 @@ body {
 	padding: 8px;
 }
 
+hr {
+     border-style: solid;
+     border: 3px solid #C0C0C0; 
+     margin-bottom: 40px;
+     margin-top: 40px;
+}
+
 h1 {
-  border-bottom: 4px solid #C0C0C0;
-  padding-bottom:5px;
+  text-align: center;
 }
 
 h2 {
-	text-align: left;
-	padding: 8px;
+  text-align: center;
+  margin: 0 0 0 0;
 }
 
 /*.effort > td {
